# plugin-mysticism

./: PLAN.md  README.md  package.json
python/: pyproject.toml
python/elizaos_plugin_mysticism/: __init__.py  types.py
python/elizaos_plugin_mysticism/engines/: astrology.py  iching.py  tarot.py
python/tests/: test_astrology.py  test_iching.py  test_tarot.py
rust/: Cargo.toml
rust/src/: lib.rs  types.rs
rust/src/engines/: astrology.rs  iching.rs  mod.rs  tarot.rs
rust/tests/: integration_tests.rs
typescript/: biome.json  build.ts  package.json  tsconfig.build.json  tsconfig.json
typescript/__tests__/engines/: astrology.test.ts  iching.test.ts  tarot.test.ts
typescript/__tests__/integration/: service-edge-cases.test.ts
typescript/__tests__/services/: mysticism-service.test.ts  payment.test.ts
typescript/__tests__/utils/: reading-helpers.test.ts
typescript/src/: index.ts  types.ts
typescript/src/actions/: astrology-reading.ts  check-payment.ts  iching-reading.ts  reading-followup.ts  request-payment.ts  tarot-reading.ts
typescript/src/engines/astrology/: chart.ts  index.ts  interpreter.ts  zodiac.ts
typescript/src/engines/astrology/data/: houses.json  signs.json  (+1 more)
typescript/src/engines/iching/: divination.ts  index.ts  interpreter.ts
typescript/src/engines/tarot/: deck.ts  index.ts  interpreter.ts  spreads.ts
typescript/src/forms/: astrology-intake.ts  feedback.ts
typescript/src/providers/: economic-context.ts  mystical-knowledge.ts  reading-context.ts
typescript/src/routes/: readings.ts
typescript/src/services/: mysticism-service.ts
(+2 files in other folders)
